@@ -138,6 +138,8 @@ name, date, heure, gamestate, position, name perso, name server, versions
 
 **** TODO OgreGui2 implementation and UnitTest                        [57%]
      :CLOCK:
+     CLOCK: [2010-10-16 sam. 17:09]--[2010-10-16 sam. 17:30] =>  0:21
+     CLOCK: [2010-10-16 sam. 14:43]--[2010-10-16 sam. 15:15] =>  0:32
      CLOCK: [2010-09-07 mar 08:46]--[2010-09-07 mar 09:25] =>  0:39
      CLOCK: [2010-09-04 sam. 19:59]--[2010-09-04 sam. 20:22] =>  0:23
      CLOCK: [2010-08-22 dim. 12:37]--[2010-08-22 dim. 13:03] =>  0:26
@@ -227,8 +229,21 @@ name, date, heure, gamestate, position, name perso, name server, versions
 	    should handle the empty skinName propagation
       - [X] Widget implementation
       - [X] Makes the client/ building works again
-      - [ ] Window implementation
+      - [X] Makes the gsMainMenu's window be drawn		  
+            - [X] Window::Window should call Drawable::loadSkinnableTexture
+	    - [X] Drawable::draw() implementation 
+		  using mTexture and QuadRenderer
+      - [-] Window implementation
+	    - [X] Container::draw() should draw childs*
+	    - [ ] GameEngine::draw() should be called again
+		  Maybe removed to avoig olgOgreGui's dependencies
+		  - [ ] Must create a renderqueuelistener as in oldOgreGui
+		  - [ ] Add it to the current SceneManager
+	    - [ ] Test it with a Label
+		  Label::Label should call Drawable::loadSkinnableTexture
+		  temporary use of textinput image
 - [ ] Skins
+      Should rename bgui.* images default.*
       - [ ] Window
       - [ ] Drawable
       - [ ] Widget
