@@ -114,8 +114,15 @@ A system that serialize widgets position and configuration
    Libraries versionning in doc/libVersionning.html and configure.in
    FT is the ROADMAP file time (C-c C-x C-d)
 
-* v0.0.5-205 (16 aug 2010 - ???) SLOC ??? UT ??? FT ??:??
-- (12) Fixed some docuùmentation warnings
+* v0.0.5-206 (16 oct 2010 - ???) SLOC ??? UT ??? FT ??:??
+- (1) Fixed some doxygen warnings
+   Drawable, Container, Brush, TextureNotFoundException, SkinNotFoundException
+
+* v0.0.5-205 (16 aug 2010 - 16 oct 2010) SLOC 41,316 UT ??? FT 59:32
+- Container::draw() draws all ist childs
+- Drawable::draw() implementation
+- Window constructor uses Drawable::loadSkinnableTexture()
+- Fixed some docuùmentation warnings
    Drawable
 - Removed ambiguities for Window in some client files
 - Trying to build the client
@@ -131,28 +138,3 @@ A system that serialize widgets position and configuration
 - DrawableTest::testLoadTexture works
 - tests/helpers/OgreMinimalSetup::teardownOgre() implementation
 - Created a unit tests helpers convenience library
-
-* v0.0.5-204 (11 jul 2010 - 16 aug 2010) SLOC 41,211 UT ??? FT 51:08
-- Continue Drawable's implementation
-   loadTexture + tests, loadSkinnableTexture
-- Implemented some getter/setter for Drawable
-   for mSkinName (empty propagation), mTexturePtr
-- Added mBrush and mGuiTransparency to GameEngine
-   and related functions draw() and *GuiTransparency
-- Some documentation warnings fixed
-- Detailled ROADMAP tasks for GameEngine and Drawable
-- BrushTest skeleton implementation
-- GameState::draw implementation (mScissor member added)
-- GameState now contains a Container member and a draw function
-- OgreGui now uses Ogre::Vector3
-- Retieved GuiVertex from oldOgreGui
-- Copied functions (and needed members) from QuadRenderer to Brush
-   end, setTexturePtr, setUvMap, setScissorRectangle (2X)
-   drawRectangle, setColor, setCorners, feedVectors, drawQuad
-   xPixelToNative, yPixelToNative, checkHarwareBuffer
-- Copied functions (and needed members) from QuadRenderer to Brush
-   constructor, destructor, setHardwareBuffer, createTexture, begin
-- Brush skeleton implementation
-- Fixed some documentation warnings
-   ContainerTest, Container, OgreguiTestSuite, \file errors, doc/doc.h
-- Made changes in doc.h to explains SLOC values between r198 and r199
