@@ -30,20 +30,35 @@
      </tr>
      
 <!-- Add here a version when it is finished (when switching to Ver++) -->
-     <tr class="regTest1">
-       <td>v0.0.5-204</td>                        <!-- Version -->
-       <td>16 aug 2010</td>                       <!-- Date -->
-       <td align="right">41&nbsp;211</td>         <!-- SLOC -->
+     <tr class="regTest2">
+       <td>v0.0.5-205</td>                        <!-- Version -->
+       <td>16 oct 2010</td>                       <!-- Date -->
+       <td align="right">41&nbsp;316</td>         <!-- SLOC -->
        <td align="right">13</td>                  <!-- Console count -->
-       <td>247</td>                               <!-- Unit tests -->
+       <td>250</td>                               <!-- Unit tests -->
        <td>OK</td>                                <!-- Linux -->
        <td><font color="red">No</font></td>       <!-- Win32 -->
        <td>-</td>                                 <!-- Mem on win32 -->
-       <td>2083</td>                              <!-- Doc pages -->
-       <td>335</td>                               <!-- ChangeLog lines -->
+       <td>2&nbsp;093</td>                        <!-- Doc pages -->
+       <td>385</td>                               <!-- ChangeLog lines -->
        <td>416</td>                               <!-- Number of PO msg -->
-       <td>Drawable implementation continue.</td> <!-- Comment -->
+       <td>OgreGui's drawing implemenattion.</td> <!-- Comment -->
        <td><font color="red">Failed</font></td>   <!-- Unit tests result -->
+     </tr>
+     <tr class="regTest1">
+       <td>v0.0.5-204</td>
+       <td>16 aug 2010</td>
+       <td align="right">41&nbsp;211</td>
+       <td align="right">13</td>
+       <td>247</td>
+       <td>OK</td>
+       <td><font color="red">No</font></td>
+       <td>-</td>
+       <td>2083</td>
+       <td>335</td>
+       <td>416</td>
+       <td>Drawable implementation continue.</td>
+       <td><font color="red">Failed</font></td>
      </tr>
      <tr class="regTest2">
        <td>v0.0.5-203</td>
@@ -871,5 +886,5 @@
    <hr>
 
      
-<!-- hhmts start -->Last modified: Tue Aug 17 19:04:52 CEST 2010 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Oct 16 16:06:04 CEST 2010 <!-- hhmts end -->
 </body> </html>
